[package]

name = "pistoncore-sdl2_window"
version = "0.62.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>",
    "Tony Aldridge <tony@angry-lawyer.com>"]
keywords = ["sdl2", "window", "piston"]
description = "A SDL2 back-end for the Piston game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/sdl2_window.git"
homepage = "https://github.com/pistondevelopers/sdl2_window"

[lib]

name = "sdl2_window"

[dependencies]
sdl2 = "0.32.1"
pistoncore-window = "0.43.0"
pistoncore-input = "0.28.0"
shader_version = "0.6.0"
gl = "0.11.0"
